--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.vladsch.flexmark:flexmark-all:0.62.2'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.vladsch.flexmark:flexmark-all:0.62.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
