--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.intellij' version '0.4.21'
 }
 
-group 'io.github.hinaser'
+group 'com.github.hinaser'
 version '0.1.0'
 
 repositories {
