--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,25 @@ plugins {
     id 'org.jetbrains.intellij' version '0.4.21'
 }
 
-group 'io.github.hinaser'
-version '0.1.0'
+group 'com.github.hinaser'
+version '0.0.1'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'com.vladsch.flexmark:flexmark-all:0.62.2'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.vladsch.flexmark:flexmark-all:0.62.2'
+    implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'org.glassfish:javax.json:1.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '202.5958.24-EAP-SNAPSHOT'
+    version '202.6109.22-EAP-SNAPSHOT'
 }
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      <em>The first relase</em>"""
 }
