Update build.gradle for publish

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,6 @@ patchPluginXml {
     changeNotes """
       <em>The first relase</em>"""
 }
+publishPlugin {
+    token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
+}
