--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ intellij {
 }
 patchPluginXml {
     changeNotes({ changelog.getLatest().toHTML() })
+    sinceBuild '202.6109'
 }
 publishPlugin {
     token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
