--- a/build.gradle
+++ b/build.gradle
@@ -27,13 +27,12 @@ dependencies {
 // For debugging purpose, I recommend to also download correspond source file here.
 //   https://github.com/JetBrains/intellij-community/tags
 intellij {
-    version '211.6693.111'
-    // version '203.8084.24'
-    // version '202.8194.7'
+    version '212.5080.55'
+    // version '211.6693.111'
+    updateSinceUntilBuild false
 }
 patchPluginXml {
     changeNotes({ changelog.getLatest().toHTML() })
-    sinceBuild '202.6109'
 }
 publishPlugin {
     token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
